k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pan-finder
  labels:
    app.kubernetes.io/name: pan-finder
    app.kubernetes.io/instance: pan-finder
